--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -43,7 +43,7 @@ custom:
     api:
       info:
         version: v1.0.0
-        title: TODOS APP
+        title: Todos App
         description: Serverless application for todos application
     models:
       - name: CreateTodoRequest
@@ -80,7 +80,7 @@ functions:
       - Effect: Allow
         Action:
           - dynamodb:Query
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/index/${self:provider.environment.INDEX_NAME}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/index/${self:provider.environment.TODOS_CREATED_AT_INDEX}
       - Effect: Allow
         Action:
           - xray:PutTraceSegments
@@ -101,7 +101,7 @@ functions:
             description: Create a new todo task
             requestModels:
               'application/json': CreateTodoRequest
-    iamRoleStatementsName: ${self:provider.environment.PROJECT_NAME}-create-todo-role4-${self:provider.stage}      
+    iamRoleStatementsName: ${self:provider.environment.PROJECT_NAME}-create-todo-role-${self:provider.stage}      
     iamRoleStatements:
       - Effect: Allow
         Action:
